Working on dark mode

--- a/bibleApp.css
+++ b/bibleApp.css
@@ -456,6 +456,9 @@ div.buttons{
     vertical-align: bottom;
     background-color: var(--buttons);
     border: var(--buttons-border);
+    font-weight:bolder;
+    font-size: 2em!important;
+    width: 100%;
 }
 button:disabled {
     cursor: default;
