--- a/bibleApp.css
+++ b/bibleApp.css
@@ -272,16 +272,24 @@ code{position: relative; padding-top: 5px;}
 #ref_search_versions_holder #searchdiv {
     display: flex;
     flex: 1;
-    min-width: 500px;
 }
 #ref_search_versions_holder #refdiv *,
 #ref_search_versions_holder #searchdiv * {
     font-size: var(--fontsize-title);
 }
 #refnav #app_settings {
-    border-right: 5px solid var(--grey);
+    border-right: 0.25px solid var(--grey);
     background: var(--ref-img);
     overflow: hidden;
+}
+#refnav #app_settings>button {
+    width: auto;
+    min-width: 40px;
+    padding: 6px 2px;
+    font-size: 22.5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #refnav #app_settings * {
     display: block;
@@ -299,7 +307,7 @@ code{position: relative; padding-top: 5px;}
     font-size: 22.5px;
 }
 #bibleversions_btns {
-    display: inline-flex;
+    display: contents;
 }
 #bibleversions_btns input {
     width: 6px;
@@ -330,12 +338,12 @@ code{position: relative; padding-top: 5px;}
 #refnav .bible_nav *:active {
     background: var(--ref-img);
 }
-#togglenavbtn{
-    min-width: 40px;
+#togglenavbtn {
+    min-width: 40.5px;
     height: 100%;
 }
 #forreference,#forwordsearch,#titlebar_show_searchsettings{
-    min-width: 50px;
+    min-width: 53px;
 }
 .ref_hlt {
     font-weight: bold;
@@ -376,9 +384,9 @@ button {
 }
 .buttons {
     background: var(--ref-img);
-    border-bottom: 2px solid var(--grey);
+    border-bottom: 2px solid #70707072;
     display: flex;
-    width: 100%;
+    width: auto;
 }
 #ref_search_versions_holder {display: flex;flex-wrap: wrap;}
 #context_menu {
@@ -745,8 +753,9 @@ sup {
 }
 #resizerdiv {
     background-color: var(--grey);
+    /* background-color: #70707072; */
     float: right;
-    width: 2.5px;
+    width: 1px!important;
     height: 100%;
     cursor: ew-resize;
 }
