chptheading&button var(--fontsize-main)

--- a/bibleApp.css
+++ b/bibleApp.css
@@ -66,6 +66,11 @@
 }
 .b{font-weight: bold;}
 .i{font-style: italic;}
+.em{
+    font-style: italic;
+    font-weight: bold;
+    font-size: 0.75em;
+}
 html {
     padding: 0;
     font-size: var(--fontsize-main);
@@ -91,11 +96,6 @@ body {
 }
 body * {
     box-sizing: border-box;
-}
-.em{
-    font-style: italic;
-    font-weight: bold;
-    font-size: 0.75em;
 }
 sup{
     font-size: 0.6em;
@@ -123,7 +123,7 @@ li li li{
 .chptheading {
     background-color: var(--chpt);
     border-bottom: 0.5px solid var(--grey);
-    font-size: small;
+    font-size:  var(--fontsize-main);
 }
 #ppp .verse:not(code) {
     font-size: var(--fontsize-scripture);
@@ -350,7 +350,7 @@ code{position: relative; padding-top: 5px;}
     width: 20px;
 }
 button {
-    font-size: 0.75em;
+    font-size: var(--fontsize-main);
     /* font-weight: bolder!important;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
     cursor: pointer;
